# automatic_infusion_device

./: .gitignore  CMakeLists.txt  FinalReport.md  README.md  image_backend.py  publisher.cpp  pump_data.json  pump_data.json.20250428153050  pump_data.json.20250428160052  pump_data.json.20250428161717  pump_data.json.20250428162505  pump_data.json.20250428163637  pump_data.json.20250428164120  pump_data.json.20250428164957
design_drafts/: system_topology.md
include/: battery_monitor.hpp  buzzer_songs.h  buzzer_tones.h  camera_manager.hpp  infusion_app.hpp  infusion_state_machine.hpp  linux_beep.h  liquid_detector.hpp  liquid_test.hpp  logger.hpp  motor_controller.hpp  motor_driver.hpp  mqtt_handler.hpp  mqtt_thread_manager.hpp  openfsm.h  pump_common.hpp  pump_database.hpp  rpc.hpp  signal_handler.hpp  sound_effect_manager.hpp  state_machine.hpp  telemetry_interface.hpp
include/camera_hal/: camera_lccv.hpp
src/: battery_monitor.cpp  camera_manager.cpp  infusion_app.cpp  infusion_state_machine.cpp  linux_beep.cpp  liquid_detector.cpp  liquid_test.cpp  main.cpp  motor_controller.cpp  motor_driver.cpp  mqtt_handler.cpp  mqtt_thread_manager.cpp  openfsm.cpp  pump_calibration.cpp  pump_database.cpp  rpc.cpp  signal_handler.cpp  sound_effect_manager.cpp  subscriber.cpp
src/camera_hal/: camera_lccv.cpp
